--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/UlisesGascon/POC-azure-iot-digital-twins-modeling#readme",
   "devDependencies": {
+    "@azure/dtdl-parser": "1.0.0-beta.2",
     "cross-env": "7.0.3",
     "jest": "29.4.1",
     "standard": "17.0.0"
